# jkutop

./: .gitignore  Makefile  Makefile.am  Makefile.in  README  configure  configure.ac  def.h  getpids.c  jkups.man  jkutop.c  jkutop.h  jkutop.man  printing.c  printing.h  readmeminfo.c  readproc.c  readsmaps.c  readstatus.c  sorting.c
autom4te.cache/: output.1  traces.0  traces.1
